# workTT

./: CMakeLists.txt  CMakeUserPresets.json  NoomyPlan  README.txt  a.out  authenticatesystem.cpp  authenticatesystem.h  balance_sheet_report.csv  budget_Q1.csv  budget_Q2.csv  budget_Q3.csv  budget_Q4.csv  budgetpage.cpp  budgetpage.h  budgetpagebudget.cpp  budgetpagebudget.h  budgetpageexpenses.cpp  budgetpageexpenses.h  business_financials.csv  cashflowreport.csv  cashflowtracking.cpp  cashflowtracking.h  dashboard.cpp  dashboard.h  expense_breakdown_report.csv  financialreport.cpp  financialreport.h  inventory.cpp  inventory.h  invoice.cpp  invoice.h  invoicemanager.cpp  invoicemanager.h  invoices.json  loginpage.cpp  loginpage.h  main.cpp  mainwindow.h  moc_bu  moc_budgetpage.cpp  (+12 more)
